WebContent/VAADIN/themes/reindeer/styles.css
/* ... */
.v-tabsheet-tabitem,
.v-tabsheet-spacertd div {
	border: none;
	height: 32px;
	background: transparent repeat-x;
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1275px;
	padding: 0;
	color: #222;
	text-shadow: #fff 0 1px 0;
}
.v-tabsheet-tabitem .v-caption {
	border: none;
	height: 23px;
	background: no-repeat right top;
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: right -1307px;
	padding: 9px 8px 0 6px;
}
.v-tabsheet-tabitem .v-caption-closable {
	padding-right: 0;
	padding-left: 17px;
}
.v-tabsheet-tabitem .v-captiontext {
	height: 16px;
	line-height: 16px;
}
.v-tabsheet-caption-close {
	float: right;
	width: 19px;
	height: 18px;
	margin: -1px -1px 0;
	padding-left: 2px;
	background: transparent;
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1339px;
	cursor: default;
	text-indent: -999px;
	overflow: hidden;
	font-size: 14px;
	font-weight: normal;
}
.v-ff .v-tabsheet-caption-close,
.v-ie7 .v-tabsheet-caption-close {
	margin-top: -17px;
}
.v-ie6 .v-tabsheet-caption-close {
	float: none;
}
.v-tabsheet-caption-close:hover {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1357px;
}
.v-tabsheet-caption-close:active {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1375px;
}
.v-tabsheet-tabitem-selected .v-tabsheet-caption-close {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1393px;
}
.v-tabsheet-tabitem-selected .v-tabsheet-caption-close:hover {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1411px;
}
.v-tabsheet-tabitem-selected .v-tabsheet-caption-close:active {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1429px;
}
.v-tabsheet-tabitemcell-selected {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1447px;
}
.v-tabsheet-tabitemcell-selected-first {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1479px;
}
.v-tabsheet-tabitem-selected {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1511px;
	color: #232930;
}
.v-tabsheet-tabitem-selected .v-caption {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: right -1543px;
}
.v-tabsheet-spacertd div {
	margin-right: 4px;
}
.v-tabsheet-spacertd {
	background: transparent no-repeat right top;
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: right -1575px;
}
.v-tabsheet-content {
	border: 1px solid #dcdcdc;
	border-bottom: none;
	border-top: none;
	color: #222;
	text-shadow: none;
}
.blue .v-tabsheet-content {
	border-color: #a8bcc5;
}
.v-tabsheet-tabsheetpanel {
	background: #fff;
}
.v-sa .v-tabsheet-content,
.v-ff3 .v-tabsheet-content {
	border-color: rgba(0,0,0,.1);
}
.v-tabsheet-deco {
	height: 1px;
	border-top: 1px solid #bebebe;
	background: #e2e2e2;
	overflow: hidden;
}
.blue .v-tabsheet-deco {
	border-color: #92a3ac;
	background: #adc2cd;
}
.v-sa .v-tabsheet-deco,
.v-ff3 .v-tabsheet-deco {
	border-top-color: rgba(0,0,0,.1);
	background: rgba(0,0,0,.08);
}


/* Icons & error indicators */

.v-tabsheet-tabs .v-icon,
.v-tabsheet-tabs .v-captiontext,
.v-tabsheet-tabs .v-errorindicator {
	display: inline;
	float: none;
}
.v-sa .v-tabsheet-tabs .v-captiontext {
	display: inline-block;
}
.v-tabsheet-tabs .v-icon {
	width: 16px !important;
	height: 16px !important;
}
.v-tabsheet-tabs .v-errorindicator {
	display: inline-block;
	width: 13px;
	height: 16px;
	background: transparent url(common/icons/error.png) no-repeat 50%;
}
.v-ff2 .v-tabsheet-tabs .v-icon,
.v-ff2 .v-tabsheet-tabs .v-errorindicator {
	display: -moz-inline-stack;
}
.v-ie6 .v-tabsheet-tabs .v-errorindicator {
	background-image: url(common/icons/error-ie6.png);
}
.v-ie .v-tabsheet-tabs .v-errorindicator {
	zoom: 1;
	display: inline;
}
.v-ie8 .v-tabsheet-tabs .v-errorindicator {
	display: inline-block;
}

/* Tabsheet scroller styles */

.v-tabsheet-scroller {
	height: 31px;
	margin-top: -31px;
	padding: 0 3px 0 4px;
	border-right: 1px solid #c2c2c2;
	border-left: 1px solid #cfcfcf;
	position: relative;
	float: right;
	background: transparent url(tabsheet/img/framed/tab-bg.png) repeat-x left -1px;
	width: 36px;
}
.v-tabsheet-scroller button {
	margin-top: 7px;
}
.v-tabsheet-scrollerPrev,
.v-tabsheet-scrollerNext,
.v-tabsheet-scrollerPrev-disabled,
.v-tabsheet-scrollerNext-disabled {
	border: none;
	background: transparent;
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1607px;
	width: 18px;
	height: 17px;
	overflow: hidden;
	cursor: default;
}
.v-tabsheet-scroller button::-moz-focus-inner {
	border: none;
}
.v-tabsheet-scrollerNext {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1624px;
}
/* ... */

